# gage-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile  pyproject.toml
.github/workflows/: build.yaml  release.yaml
src/: config.rs  dialog.rs  env.rs  error.rs  logger.rs  main.rs  profile.rs  py.rs  result.rs  secrets.rs  theme.rs  util.rs
src/commands/: init.rs  mod.rs  status.rs
src/commands/dataset/: create.rs  list.rs  mod.rs
src/commands/endpoint/: mod.rs  start.rs  status.rs  stop.rs
src/commands/log/: common.rs  common2.rs  delete.rs  delete2.rs  info.rs  info2.rs  list.rs  mod.rs  purge.rs  purge2.rs  restore.rs  restore2.rs  review.rs  review2.rs
src/commands/profile/: list.rs  mod.rs  status.rs  use_.rs
src/commands/task/: eval.rs  info.rs  list.rs  mod.rs  run.rs
src/cursive/: mod.rs  printer_ext.rs
src/cursive/view/: mod.rs  padding.rs  scrollable.rs
src/cursive/views/: button.rs  dialog.rs  mod.rs  page_layout.rs  plain_text.rs  screens_view.rs  scroll_view.rs
src/inspect/: dataset.rs  error.rs  event.rs  json.rs  log.rs  mod.rs  model.rs  scorer.rs  task.rs  tool.rs
src/inspect2/: log.rs
src/review/: README.md  mod.rs  theme.rs
src/review/app/: help.rs  mod.rs  view.rs
src/review/components/: banner.rs  footer.rs  header.rs  mod.rs  panel.rs  table.rs  toggle.rs  value.rs
src/review/dialogs/: confirm.rs  help.rs  mod.rs  notify.rs  status.rs
src/review/screens/: common.rs  dev.rs  mod.rs
tests/: __init__.py  test_support.md
tests/commands/: main.md  status.md
tests/commands/datasets/: list.md  main.md
tests/commands/log/: delete.md  delete2.md  info.md  info2.md  list.md  main.md  purge.md  purge2.md  restore.md  restore2.md  (+1 more)
tests/examples/: add.md  quick-start.md
tests/logs/: log-dir.md
tests/profiles/: profile-env.md
tests/review/: logs.md
(+48 files in other folders)
