[project]
name = "gage-cli"
description = "Gage command line tools"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Typing :: Typed",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
]
dynamic = ["version"]
dependencies = ["gage-inspect"]

[project.optional-dependencies]
dev = ["groktest>=0.3"]

[build-system]
requires = ["maturin>=1.9,<2.0", "patchelf", "ziglang"]
build-backend = "maturin"

[tool.groktest]
include = "tests/**/*.md"
python.init = "from tests import *"

[tool.maturin]
features = ["pyo3/abi3-py310"]
